# rust-poem-api-template

./: .cargo-generate.toml  Cargo.toml  README.md  STRUCTURE_MIGRATION.md  cargo-generate.toml  todo.md
src/: lib.rs  main.rs
src/api/: mod.rs
src/api/system/: controller.rs  dto.rs  mod.rs
src/api/user/: controller.rs  dto.rs  mod.rs
src/config/: mod.rs  tags.rs
src/graphql/: error.rs  mod.rs  mutation.rs  query.rs
src/graphql/modules/: mod.rs
src/graphql/modules/user/: mod.rs  models.rs  mutation.rs  query.rs
src/middlewares/: mod.rs
src/models/: mod.rs  user.rs
src/models/common/: mod.rs
src/services/: mod.rs
src/utils/: mod.rs  response.rs
